--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,11 +6,11 @@
         <AssemblyName>ScoreAcc</AssemblyName>
         <Authors>BlqzingIce</Authors>
         <Version>1.1.0</Version>
-        <GameVersion>1.40.0</GameVersion>
+        <GameVersion>1.39.1</GameVersion>
         <Description>ScorePercentage knockoff</Description>
-        <ProjectHome></ProjectHome>
-        <ProjectSource></ProjectSource>
-        <Donate></Donate>
+        <!-- <ProjectHome></ProjectHome> -->
+        <!-- <ProjectSource></ProjectSource> -->
+        <!-- <Donate></Donate> -->
     </PropertyGroup>
     <ItemGroup>
         <Dependency Include="BSIPA" Version="^4.3.5" />
